<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:background="@color/background"
    android:gravity="fill_vertical"
    android:orientation="vertical"
    tools:context=".TaskFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_top_ten_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/gr1"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/task_header"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_logo_2"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo_2"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="15dp"
        app:layout_constraintTop_toBottomOf="@id/info_container"
        android:background="@color/tiptop_dark" />

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>


    <RelativeLayout
        android:id="@+id/task_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toEndOf="@id/info_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/question_filed" />

        <TextView
            android:id="@+id/tv_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp"
            android:text="@string/task_placeholder"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_game_icon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_2"
            tools:ignore="ContentDescription" />


        <Button
            android:id="@+id/btn_change_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_boarder"
            android:padding="10dp"
            android:shadowColor="#5C5155"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="2.6"
            android:text="@string/change_task"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="10dp"
        android:background="@color/tiptop_dark" />

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_players_icon"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/players_2" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:max="10"
            android:min="1"
            android:progress="5" />

        <TextView
            android:id="@+id/tv_number_of_players"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

    </LinearLayout>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_match_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:text="@string/match_cards"
        android:textColor="@color/white" />

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="10dp"
        android:background="@color/tiptop_dark" />

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_new_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_boarder"
            android:padding="8dp"
            android:shadowColor="#5C5155"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="2.6"
            android:text="@string/go_to_home"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_start_round"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_boarder"
            android:padding="8dp"
            android:shadowColor="#5C5155"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="2.6"
            android:text="@string/start_round"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>

</LinearLayout>