<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".AllTasksFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_top_ten_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/gr1"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/all_tasks_header"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_logo_2"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo_2"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/tiptop_dark" />

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>


    <RelativeLayout
        android:id="@+id/task_container_1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageView_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/question_filed" />

        <TextView
            android:id="@+id/tv_task_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp"
            android:text="@string/task_placeholder"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="10dp"
        android:background="@color/tiptop_dark" />

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>

    <RelativeLayout
        android:id="@+id/task_container_2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/question_filed_flipped" />

        <TextView
            android:id="@+id/tv_task_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp"
            android:text="@string/task_placeholder"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="10dp"
        android:background="@color/tiptop_dark" />

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>


    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_new_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_boarder"
            android:padding="10dp"
            android:shadowColor="#5C5155"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="2.6"
            android:text="@string/go_to_home"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_change_tasks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_boarder"
            android:padding="10dp"
            android:shadowColor="#5C5155"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="2.6"
            android:text="@string/change"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="wrap_content"/>


</LinearLayout>